--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "CMS Project",
   "version": "1.0.0",
-  "description":"",
+  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "seed": "node seeds seed.js"
   },
-"author": "Hector De La Cruz",
+  "author": "Hector De La Cruz",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
@@ -18,4 +19,3 @@
     "sequelize": "^6.22.1"
   }
 }
-
