--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Hector De La Cruz",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "bootstrap": "^5.2.1",
     "connect-session-sequelize": "^7.1.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
@@ -18,6 +19,7 @@
     "express-session": "^1.17.3",
     "handlebars": "^4.7.7",
     "mysql2": "^2.3.3",
+    "pg": "^8.8.0",
     "sequelize": "^6.22.1"
   }
 }
